assignments/6.CreateIngress/IngressDefinition.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: goazure-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
      - <yourmeetuname>.meetupdemo.goazure.com
#      secretName: samplemvc-tls
  rules:
  - host: <yourmeetuname>.meetupdemo.goazure.com
    http:
      paths:
      - path: /
        backend:
          serviceName: myapp-svc
          servicePort: 80
